force-app/main/default/objects/Subsidy__c/Subsidy__c.object-meta.xml
<CustomObject>
    <description>To hold information regarding the customers subsidy. Customer Service will get a tab on Account, where they can see the customers subsidy, if there&apos;s a active or expired contract in Salesforce with Mobile (only products with subsidy). 
If the subsidy information isn&apos;t in Salesforce, the Customer Service needs to edit the data table themself, and then we use this object to store that information, e.g. for RPA to automate the NP Follow-up assignment.</description>
    <label>Subsidy</label>
    <nameField>
        <displayFormat>SL-{0000000}</displayFormat>
        <label>Subsidy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subsidies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>