force-app/main/default/objects/Subsidy__c/fields/Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term__c</fullName>
    <label>Contract Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contract_Term</valueSetName>
    </valueSet>
</CustomField>