force-app/main/default/objects/Subsidy__c/fields/Unit_subsidy__c.field-meta.xml
<CustomField>
    <fullName>Unit_subsidy__c</fullName>
    <label>Unit subsidy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>