force-app/main/default/objects/Subsidy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Product_Name__c</columns>
    <columns>Quantity__c</columns>
    <columns>Unit_subsidy__c</columns>
    <columns>Contract_Term__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>